# serde-shape

./: Cargo.toml  README.md
.github/: semantic.yml
.github/workflows/: ci.yml
serde-shape/: Cargo.toml
serde-shape-derive/: Cargo.toml
serde-shape-derive/src/: lib.rs
serde-shape-derive/tests/: derive.rs
serde-shape/examples/: env_vars.rs
serde-shape/src/: lib.rs  tests.rs
serde-shape/src/impls/: container.rs  mod.rs  primitive.rs  tuple.rs  wrapper.rs
serde-shape/tests/: derive.rs  env_vars.rs
serde-shape/tests/snapshots/: derive__snapshots_conversion_based_opaque_shape.snap  derive__snapshots_internally_tagged_enum_shape_from_variant_attrs.snap  derive__snapshots_phantom_data_generic_field_without_shape_bound.snap  derive__snapshots_recursive_type_reusing_the_same_definition.snap  derive__snapshots_skipped_generic_field_without_shape_bound.snap  derive__snapshots_struct_shape_from_container_and_field_attrs.snap  derive__snapshots_transparent_struct_shape.snap  env_vars__snapshots_config_shape.snap  env_vars__snapshots_env_options.snap
tests/derive/: Cargo.toml
tests/derive/tests/: derive.rs
tests/derive/tests/snapshots/: derive__snapshots_conversion_based_opaque_shape.snap  derive__snapshots_internally_tagged_enum_shape_from_variant_attrs.snap  derive__snapshots_phantom_data_generic_field_without_shape_bound.snap  derive__snapshots_recursive_type_reusing_the_same_definition.snap  derive__snapshots_skipped_generic_field_without_shape_bound.snap  derive__snapshots_struct_shape_from_container_and_field_attrs.snap  derive__snapshots_transparent_struct_shape.snap
tests/integration/: Cargo.toml
tests/integration/tests/: env_vars.rs  std_impls.rs
tests/integration/tests/snapshots/: env_vars__snapshots_config_shape.snap  env_vars__snapshots_env_options.snap
tests/no_std/: Cargo.toml
tests/no_std/src/: lib.rs
tests/no_std/tests/: snapshots.rs
tests/no_std/tests/snapshots/: snapshots__snapshots_no_std_config_deserialize_shape.snap  snapshots__snapshots_no_std_config_serialize_shape.snap
xtask/: Cargo.toml
xtask/src/: main.rs
