# Copyright 2026 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
  "serde-shape",
  "serde-shape-derive",
  "tests/derive",
  "tests/integration",
  "tests/no_std",
  "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
homepage = "https://github.com/fast/serde-shape"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/fast/serde-shape"
rust-version = "1.85.0"

[workspace.dependencies]
# workspace dependencies
serde-shape = { version = "0.0.1", path = "serde-shape" }
serde-shape-derive = { version = "=0.0.1", path = "serde-shape-derive" }

# crates.io dependencies
clap = { version = "4.6.1" }
insta = { version = "1.48.0" }
proc-macro2 = { version = "1.0.95" }
quote = { version = "1.0.40" }
serde_derive_internals = { version = "0.29.1" }
syn = { version = "2.0.104" }
which = { version = "8.0.4" }

[workspace.lints.rust]
unknown_lints = "deny"
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
too_many_arguments = "allow"
type_complexity = "allow"

[workspace.metadata.release]
pre-release-commit-message = "chore: release v{{version}}"
shared-version = true
sign-tag = true
tag-name = "v{{version}}"
