# Copyright 2026 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "serde-shape-derive"
version = "0.0.1"

categories = ["development-tools", "encoding"]
description = "Procedural macro implementation for the serde-shape crate."
documentation = "https://docs.rs/serde-shape-derive"
keywords = ["serde", "derive", "reflection", "schema", "shape"]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde_derive_internals = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
